# cron-manager

./: .gitignore  README.md  pyproject.toml
cron_manager/: __init__.py  backend.py  cli.py  exceptions.py  flask_service.py  manager.py  models.py  validation.py
cron_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dev-docs/: promt.md
examples/: flask_admin_example.py
tests/: test_cli.py  test_flask_service.py  test_manager.py  test_validation.py
